--- a/year2-term2/web_development/Lab1/style.css
+++ b/year2-term2/web_development/Lab1/style.css
@@ -53,3 +53,49 @@ main
     color: white;
 }
 
+
+.exercise-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.challenge-header {
+    height: 75px;
+    display: flex;
+    align-items: center;
+    background-color: #fff875;
+    padding-left: 2.5em;
+    border-radius: 10px 10px 0 0;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5em;
+    padding: 2em 2.5em 2.5em 2.5em;
+}
+
+
+#button-container
+{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2em 0 2em;
+}
+
+.measure-btn {
+    padding: 0.5em;
+    border: 1px solid black;
+    width: 100px;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.25s;
+}
+
+.measure-btn:hover {
+    background-color: black;
+    color: white;
+}
