--- a/year2-term2/web_development/Lab1/style.css
+++ b/year2-term2/web_development/Lab1/style.css
@@ -81,21 +81,35 @@ main
 #button-container
 {
     display: flex;
-    justify-content: space-between;
     padding: 0 2em 0 2em;
+    justify-content: center;
+    align-items: center;
 }
 
-.measure-btn {
+.start-btn {
     padding: 0.5em;
     border: 1px solid black;
     width: 100px;
-    text-align: center;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.25s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
 }
 
-.measure-btn:hover {
+.start-btn:hover {
     background-color: black;
     color: white;
+}
+
+#my-output {
+    display: flex;
+    gap: 2em;
+}
+
+#output1 {
+    align-self: center;
+    justify-self: center;
 }
